--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Text to Image">
-    <meta name="author" content="MALL lab">
+    <meta name="description" content="OCR-VQA">
+    <meta name="author" content="">
 
-    <title>KVQA</title>
+    <title>OCR-VQA</title>
 
     <link href="kvqa_ProjectFiles/bootstrap.css" rel="stylesheet">
     <link href="kvqa_ProjectFiles/style.css" rel="stylesheet">
@@ -34,12 +34,12 @@
 &nbsp;
 &nbsp;
 </center>
-Q: Who is to the left of Barack Obama? <br>
-A: <font color="green">Richard Cordray</font><br>
-Q: Do people in the image have common occupation? <br>
-A: <font color="green">Yes</font><br>
-Q: Who among the people in the image is called by the nickname Barry?<br>
-A: <font color="green">Person in the center</font>
+Q: What is the title of this book? <br>
+A: <font color="green">ermont Beautiful</font><br>
+Q: Who wrote this book? <br>
+A: <font color="green">Wallace Nutting</font><br>
+Q: What type of book is this?<br>
+A: <font color="green">Travel</font>
 </div>
 
 
@@ -114,7 +114,7 @@ analysis and VQA community
 
         <h3>Publications</h3>
        <br>
-Anand Mishra, Shashank Shekhar, Ajeet Kumar Singh, Anirban Chakraborty, <b>OCR-VQA: Visual Question Answering by Reading Text in Images</b>, AAAI 2019
+Anand Mishra, Shashank Shekhar, Ajeet Kumar Singh, Anirban Chakraborty, <b>OCR-VQA: Visual Question Answering by Reading Text in Images</b>, ICDAR 2019
 [<a href=""><u>pdf</u></a>][<a href=""><u>Abstract</u></a>][<a href="
 "><u>Spotlight slides</u></a>] 
 
