--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="header">
       <br>
 <center>
-<img src="kvqa_ProjectFiles/goal1.png" height="500" border="1">
+<img src="kvqa_ProjectFiles/goal.png" height="500" border="1">
 &nbsp;
 &nbsp;
 &nbsp;
