--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 &nbsp;
 &nbsp;
 &nbsp;
-</center>
 Q: What is the title of this book? <br>
-A: <font color="green">ermont Beautiful</font><br>
+A: <font color="green">Vermont Beautiful</font><br>
 Q: Who wrote this book? <br>
 A: <font color="green">Wallace Nutting</font><br>
 Q: What type of book is this?<br>
 A: <font color="green">Travel</font>
+</center>    
 </div>
 
 
@@ -85,7 +85,7 @@ analysis and VQA community
 <table style="margin-left: auto; margin-right: auto;">
 <tbody>
 <tr>
-<td><img style="margin-right: 10px; float: left;" src="kvqa_ProjectFiles/sample.png" alt="I4" height="190" /></td>
+<!-- <td><img style="margin-right: 10px; float: left;" src="" alt="I4" height="190" /></td> -->
 </tr>
 </tbody>
 </table>
@@ -112,7 +112,7 @@ analysis and VQA community
 }</tt></pre>
 <hr>
 
-        <h3>Publications</h3>
+        <h3>Publication</h3>
        <br>
 Anand Mishra, Shashank Shekhar, Ajeet Kumar Singh, Anirban Chakraborty, <b>OCR-VQA: Visual Question Answering by Reading Text in Images</b>, ICDAR 2019
 [<a href=""><u>pdf</u></a>][<a href=""><u>Abstract</u></a>][<a href="
