--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div class="container">
       <div class="header">
         <h3 class="text"><center>OCR-VQA: Visual Question Answering by Reading Text in Images</center></h3>
+           <h4 class="text"><center>Anand Mishra, Shashank Shekhar, Ajeet Kumar Singh, Anirban Chakraborty</center></h4>
+          <h5 class="text"><center>ICDAR 2019</center></h5>
        </div>
 
  <div class="container">
