--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
     <div class="container">
       <div class="header">
-        <h3 class="text"><center>OCR-VQA: Visual Question Answering by Reading Text in Images</center></h3>
-           <h4 class="text"><center>Anand Mishra, Shashank Shekhar, Ajeet Kumar Singh, Anirban Chakraborty</center></h4>
-          <h5 class="text"><center>ICDAR 2019</center></h5>
+        <h2 class="text"><center>OCR-VQA: Visual Question Answering by Reading Text in Images</center></h2>
+           <h3 class="text"><center>Anand Mishra, Shashank Shekhar, Ajeet Kumar Singh, Anirban Chakraborty</center></h3>
+          <h3 class="text"><center>ICDAR 2019</center></h3>
+          <h3 class="text"><center>[<a href="">PDF</a>]</center></h3>
        </div>
 
  <div class="container">
