--- a/index.html
+++ b/index.html
@@ -33,18 +33,17 @@
       <br>
 <center>
 <img src="kvqa_ProjectFiles/goal.jpg" height="500" border="1">
-    </center> 
+</center> 
 &nbsp;
 &nbsp;
 &nbsp;
-
+&nbsp;
 Q: What is the title of this book? <br>
 A: <font color="green">Vermont Beautiful</font><br>
 Q: Who wrote this book? <br>
 A: <font color="green">Wallace Nutting</font><br>
 Q: What type of book is this?<br>
 A: <font color="green">Travel</font>
-   
 </div>
 
 
