--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@ analysis and VQA community
         <h3>Publication</h3>
        <br>
 Anand Mishra, Shashank Shekhar, Ajeet Kumar Singh, Anirban Chakraborty, <b>OCR-VQA: Visual Question Answering by Reading Text in Images</b>, ICDAR 2019
-[<a href=""><u>pdf</u></a>][<a href=""><u>Abstract</u></a>][<a href="
-"><u>Spotlight slides</u></a>] 
+[<a href=""><u>pdf</u></a>][<a href=""><u>Abstract</u></a>]
 
 <br>
 <br>
