--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@ analysis and VQA community
 
 <div class="row">
          <h3 id="datasetD">Dataset: Downloads</h3>
-        
+        <ul> OCR-VQA: Download Link [XX MB]   </ul>
+       <ul> README   </ul>
+    <ul> Updates   </ul>
+    
             <div class="row">
 <hr>
 
