--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@ analysis demonstrate various challenges present in this dataset
 leaving ample scope for the future research. We are optimistic
 that this new task along with compiled dataset will open-
 up many exciting research avenues for the document image
-analysis and VQA community
+analysis and VQA community.
+            
+            <b> Keywords: </b> Text-VQA, OCR-VQA, Document Layout Analysis, Visual Question Answering.            
         </p>
       </div>
       <div class="row">
