--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ analysis and VQA community.
 <div class="row">
          <h3 id="datasetD">Dataset: Downloads</h3>
     <ul> <li> OCR-VQA: <a href="">Download Link</a> [XX MB] </li>
-        <li> <a href="kvqa_ProjectFiles/README.md"> README </a></li>
+        <li> <a href="./kvqa_ProjectFiles/README.txt"> README </a></li>
     <li> Updates   </li>
     </ul>
             <div class="row">
