--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ analysis and VQA community.
 
 <div class="row">
          <h3 id="datasetD">Dataset: Downloads</h3>
-    <ul> <li> OCR-VQA: <a href="">Download Link</a> [XX MB] </li>
+    <ul> <li> OCR-VQA: <a href="https://drive.google.com/drive/folders/1_GYPY5UkUy7HIcR0zq3ZCFgeZN7BAfm_?usp=sharing">Download Link</a> [XX MB] </li>
         <li> <a href="./kvqa_ProjectFiles/README.txt"> README </a></li>
     <li> Updates   </li>
     </ul>
