--- a/index.html
+++ b/index.html
@@ -25,37 +25,14 @@
         <h1 class="text"><center>OCR-VQA: Visual Question Answering by Reading Text in Images</center></h1>
            <h4 class="text"><center>Anand Mishra, Shashank Shekhar, Ajeet Kumar Singh, Anirban Chakraborty</center></h4>
           <h4 class="text"><center>ICDAR 2019</center></h4>
-          <h4 class="text"><center>[<a href="">PDF</a>]</center></h4>
+          <h4 class="text"><center>[<a href="https://anandmishra22.github.io/files/mishra-OCR-VQA.pdf">PDF</a>]</center></h4>
        </div>
 
- <div class="container">
-      <div class="header">
-      <br>
-      <div class="row">
-        <h3>Highlights</h3>
-     <ul> 
-    <li> Visual Question Answering by Reading Text in Images. </li       <li> More than 1 million question-answer pairs on more than 200K book cover images.  </li>
-    
-     </ul>
-               
-     </div>
 
-
-<div class="row">
-         <h3 id="datasetE">Dataset: Explore</h3>
-    <p>&nbsp;</p>
-<table style="margin-left: auto; margin-right: auto;">
-<tbody>
-<tr>
-<!-- <td><img style="margin-right: 10px; float: left;" src="" alt="I4" height="190" /></td> -->
-</tr>
-</tbody>
-</table>
-<a href=""> Explore more </a>
 
 <div class="row">
          <h3 id="datasetD">Dataset: Downloads</h3>
-    <ul> <li> OCR-VQA: <a href="https://drive.google.com/drive/folders/1_GYPY5UkUy7HIcR0zq3ZCFgeZN7BAfm_?usp=sharing">Download Link</a> [XX MB] </li>
+    <ul> <li> OCR-VQA: <a href="https://drive.google.com/drive/folders/1_GYPY5UkUy7HIcR0zq3ZCFgeZN7BAfm_?usp=sharing">Download Link</a> </li>
         <li> <a href="./kvqa_ProjectFiles/README.txt"> README </a></li>
     <li> Updates   </li>
     </ul>
